Implement usage of clusterip
